--- a/Hamburger-menu/index.html
+++ b/Hamburger-menu/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button id="btn">☰</button>
+    <nav id="nav">
+        <li><a href="#">Google</a></li>
+        <li><a href="#">Youtube</a></li>
+        <li><a href="#">Twitter</a></li>
+    </nav>
+
     <script src="script.js"></script>
 </body>
 </html>
